// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Ant Theme generate ant theme from darkTheme 1`] = `
{
  "algorithm": [Function],
  "components": {
    "Button": {
      "contentFontSize": 16,
      "contentFontSizeLG": 16,
      "contentFontSizeSM": 16,
    },
    "Typography": {
      "fontSizeHeading1": 24,
      "fontSizeHeading2": 20,
      "fontSizeHeading3": 18,
      "fontSizeHeading4": 16,
      "lineHeightHeading1": 1.3333333333333333,
      "lineHeightHeading2": 1.6,
      "lineHeightHeading3": 1.3333333333333333,
      "lineHeightHeading4": 1.5,
    },
  },
  "token": {
    "borderRadius": 4,
    "colorBgBase": "#ffffff",
    "colorBgElevated": "#ffffff",
    "colorBgLayout": "#f0f0f0",
    "colorError": "#f5222d",
    "colorInfo": "#9cdcfe",
    "colorPrimary": "#1890ff",
    "colorSuccess": "#b7eb8f",
    "colorTextBase": "#666666",
    "colorWarning": "#ffe58f",
    "fontSize": 14,
    "margin": 16,
    "padding": 16,
    "wireframe": false,
  },
}
`;

exports[`Generate Ant Theme generate ant theme from empty theme 1`] = `
{
  "algorithm": [Function],
  "components": {
    "Button": {
      "contentFontSize": undefined,
      "contentFontSizeLG": undefined,
      "contentFontSizeSM": undefined,
    },
    "Typography": {
      "fontSizeHeading1": undefined,
      "fontSizeHeading2": undefined,
      "fontSizeHeading3": undefined,
      "fontSizeHeading4": undefined,
      "lineHeightHeading1": undefined,
      "lineHeightHeading2": undefined,
      "lineHeightHeading3": undefined,
      "lineHeightHeading4": undefined,
    },
  },
  "token": {
    "borderRadius": undefined,
    "colorBgBase": undefined,
    "colorBgElevated": undefined,
    "colorBgLayout": undefined,
    "colorError": undefined,
    "colorInfo": undefined,
    "colorPrimary": undefined,
    "colorSuccess": undefined,
    "colorTextBase": undefined,
    "colorWarning": undefined,
    "fontSize": undefined,
    "margin": undefined,
    "padding": undefined,
    "wireframe": false,
  },
}
`;

exports[`Generate Ant Theme generate ant theme from lightTheme 1`] = `
{
  "algorithm": [Function],
  "components": {
    "Button": {
      "contentFontSize": 14,
      "contentFontSizeLG": 14,
      "contentFontSizeSM": 14,
    },
    "Typography": {
      "fontSizeHeading1": 24,
      "fontSizeHeading2": 20,
      "fontSizeHeading3": 18,
      "fontSizeHeading4": 16,
      "lineHeightHeading1": 1.3333333333333333,
      "lineHeightHeading2": 1.6,
      "lineHeightHeading3": 1.3333333333333333,
      "lineHeightHeading4": 1.5,
    },
  },
  "token": {
    "borderRadius": 4,
    "colorBgBase": "#ffffff",
    "colorBgElevated": "#ffffff",
    "colorBgLayout": "#f0f0f0",
    "colorError": "#f5222d",
    "colorInfo": "#9cdcfe",
    "colorPrimary": "#1890ff",
    "colorSuccess": "#b7eb8f",
    "colorTextBase": "#666666",
    "colorWarning": "#ffe58f",
    "fontSize": 14,
    "margin": 16,
    "padding": 16,
    "wireframe": false,
  },
}
`;
